# AdAnalyzer

./: .gitignore  README.md  analyze.sh
data/: Bloomberg2-4-2020_CLEAN  StateOfUnion  StateOfUnion2019  trump_ad_stats_merged.json
data_collector/: Cargo.toml
data_collector/src/: collector.rs  main.rs  web_server.rs
data_collector/src/web_server/: api.rs  mod.rs
data_collector/templates/: explore.html
scripts/: associate_words.py  cleanup.py  pos_dep_explorer.py  preprocess.py  render_graph.py  similarity.py
scripts/html_render/: render_template.html
