[package]
name = "data_collector"
version = "0.1.0"
authors = ["Ethan Lam <elmemphis2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0.47"
serde = { version = "1.0.104", features = ["derive"] }
chrono = "0.4.10"
clap = "2.33.0"
actix-web = "2.0.0"
actix-rt = "1.0"
futures = "0.3.4"
actix-files = "0.2.1"
askama = "0.9.0"